@@ -1,3 +1,7 @@
+30 November 2010: Wouter
+	- Fix storage of EDNS failures in the infra cache.
+	- iana portlist updated.
+
 18 November 2010: Wouter
 	- harden-below-nxdomain option, default off (because very old
 	  software may be incompatible).  We could enable it by default in
